src/test/deca/syntax/invalid/provided/commentaire_incorrect.deca
// Description:
//    commentaire classique incorrect 1


/**/*/